# cpp-modules

./: CMakeLists.txt  main.cpp
example_module/: CMakeLists.txt  example_module.cpp
